# Prefetcher-Simulation

./: LICENSE  README.md
Config_file/: cpu_configuration.json  missing_info.txt  new_champsim_congif.json  test_config.txt
Matlab/: results.mlx
prefetcher/SFP/: SFP.cc  SPF.l1d_pref  sfp.h
prefetcher/sp_ghb/: sp_ghb.cc
prefetcher/spt/: spt.cc
prefetcher/spt_ghb/: spt_ghb.cc
prefetcher/spt_v2/: spt_v2.cc
results/: 605_no_output.json  605_spghb_output.json  605_spt_output.json  638_no_output.json  638_spghb_output.json  638_spt_output.json  resnet_no_output.json  resnet_spghb_output.json  resnet_spt_output.json
scripts/: plot_generator.mlx
simulation_src/: CMakeLists.txt  DetectFacesEmbeddedBenchmark.cpp  extract_names.py  facedetectcnn.h  file_list.txt
traces/: README.md
